--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 hansard-in-full/hansard_in_full.csv
 hansard-in-full/hansard_with_mp_details.csv
 hansard-in-full/debates_xml
+hansard-in-full/debates_xml.tar.gz
 hansard-pmqs/old
