--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .Ruserdata
 
 hansard-in-full/hansard_in_full.csv
+hansard-in-full/hansard_in_full.csv.gz
 hansard-in-full/hansard_with_mp_details.csv
 hansard-in-full/debates_xml
 hansard-in-full/debates_xml.tar.gz
