--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ hansard-in-full/hansard_with_mp_details.csv
 hansard-in-full/debates_xml
 hansard-in-full/debates_xml.tar.gz
 hansard-pmqs/old
+analysis/scorers/objectivity_vs_subjectivity/subjectivity_classifier/variables/variables.data-00000-of-00001
